--- a/heatmaps/configs/config_template.yaml
+++ b/heatmaps/configs/config_template.yaml
@@ -6,13 +6,13 @@ exp_arguments:
   # name tag for saving generated figures and assets
   save_dir: HEATMAP_OUTPUT 
   # where to save raw asset files
-  raw_save_dir: heatmaps/heatmap_raw_results
+  raw_save_dir: ../heatmaps/heatmap_raw_results
   # where to save final heatmaps
-  production_save_dir: heatmaps/heatmap_production_results
+  production_save_dir: ../heatmaps/heatmap_production_results
   batch_size: 384 
 data_arguments: 
   # where is data stored; can be a single str path or a dictionary of key, data_dir mapping
-  data_dir: heatmaps/demo/slides/
+  data_dir: ../heatmaps/demo/slides/
   # column name for key in data_dir (if a dict mapping is used)
   data_dir_key: source
   # csv list containing slide_ids (can additionally have seg/patch paramters, class labels, etc.)
